# ggmath

./: .clang-format  .clang-tidy  .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt  concepts.hpp  graphics.hpp  intersection.hpp  mat.hpp  physics.hpp  ray.hpp  types.hpp  util.hpp  vec.hpp
tests/: .clang-tidy  CMakeLists.txt  test.cpp  test_util.cpp  test_vec.cpp
